# autonomous-robots

./: README.md  SETUP.md  requirements.txt  world_model_items.txt
docs/benchmarks/: ESI_BENCH.md  ROBOMME.md  RoboMME_Summary.md
docs/dataset/: ARTICRAFT3D.md  HUMANNET.md
docs/diffusion_flow_matching/: LECTURE_NOTES.md
docs/world_models/: Awesome_World_Models.md  DreamGen_NVIDIA.md  Genesis_RoboGen.md  NVIDIA_Cosmos_Cookbook.md  NVIDIA_Cosmos_Reasoning.md  Nano_World.md  Nano_World_Model.md  README.md  Representation_Learning_World_Modeling.md  Robot_Learning_Physical_World_Model.md  SANA_WM.md  Stable_World_Model.md  Theory_of_Space.md  Wan2.2.md  What_are_World_Models_Nature.md  World_Model_Robot_Learning_Survey.md  index.md
franka/: README.md
franka/cpp/: CMakeLists.txt  common.cpp  common.h  franka_hello_world.cpp  grasp_object.cpp  joint_impedance_control.cpp  motion_server.cpp  release_object.cpp  simple_motion.cpp
franka/python/: basic.py  mcp_client.py  mcp_server.py  rest.py  visual_control.ipynb
ros2/actions/actions/: CMakeLists.txt  package.xml
ros2/actions/actions/action/: Linear.action  Rotate.action
ros2/actions/actions/src/: linear_server.py  rotate_client.py  rotate_server.py
ros2/sensors/: package.xml  setup.py
ros2/sensors/sensors/: sensors.py  timer_node.py
ros2/services/: package.xml  setup.cfg  setup.py
ros2/services/services/: motion_server.py  sound_client.py
